--- a/ubuntu/nginx.conf
+++ b/ubuntu/nginx.conf
@@ -1,15 +1,57 @@
 user www-data;
 worker_processes auto;
+worker_rlimit_nofile 65535;
 error_log /var/log/nginx/error.log notice;
 pid /var/run/nginx.pid;
-events {
-    worker_connections 1024;
-}
-http {
-    log_format main '[$time_local] $proxy_protocol_addr "$http_user_agent"';
-    access_log /var/log/nginx/access.log main;
-    set_real_ip_from 127.0.0.1;
 
+events {
+    worker_connections 65535;
+    multi_accept on;
+    use epoll;
+}
+
+http {
+    # General Performance Optimizations
+    aio threads;
+    directio 4m;
+    output_buffers 4 32k;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    types_hash_max_size 4096;
+    server_names_hash_bucket_size 128;
+    server_names_hash_max_size 2048;
+    
+    # SSL Optimization
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+    ssl_buffer_size 4k;
+    
+    # Proxy Optimizations
+    proxy_max_temp_file_size 0;
+    proxy_ssl_session_reuse on;
+    proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
+    
+    # Timeouts (for long-lived WS/gRPC)
+    proxy_connect_timeout 7d;
+    proxy_send_timeout 7d;
+    proxy_read_timeout 7d;
+    keepalive_timeout 7d;
+    keepalive_requests 1000000;
+    
+    # Buffers
+    proxy_buffering off;
+    proxy_buffers 16 32k;
+    proxy_buffer_size 64k;
+    proxy_request_buffering off;
+    
+    # For gRPC specifically
+    grpc_read_timeout 7d;
+    grpc_send_timeout 7d;
+    grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    
+    
     include /etc/nginx/mime.types;
     include /etc/nginx/conf.d/xray.conf;
 }
