--- a/ubuntu/dropbear.conf
+++ b/ubuntu/dropbear.conf
@@ -6,7 +6,7 @@ NO_START=0
 DROPBEAR_PORT=143
 
 # any additional arguments for Dropbear
-DROPBEAR_EXTRA_ARGS="-p 109"
+DROPBEAR_EXTRA_ARGS="-p 109 -W 65535 -I 3600 -K 300"
 
 # specify an optional banner file containing a message to be
 # sent to clients before they connect, such as "/etc/kyt.txt"
