--- a/ubuntu/haproxy.cfg
+++ b/ubuntu/haproxy.cfg
@@ -1,30 +1,39 @@
-# CONFIGURASI FIGHTERTUNNEL LOADBALANCER [ jamm.topplug7.store ]
-# Restored to original working configuration
+# FIXED HAProxy 2.8 CONFIGURATION FOR FIGHTERTUNNEL LOADBALANCER
 global
-    stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-    stats timeout 1d
-    maxconn 100000
-    tune.bufsize 32768
-    tune.maxrewrite 2048
+    # Process management
     nbthread 4
     cpu-map 1 0
     cpu-map 2 1
     cpu-map 3 2
     cpu-map 4 3
+    maxconn 100000
+    
+    # Performance tuning
+    tune.bufsize 32768
+    tune.maxrewrite 2048
     tune.idletimer 1000
     tune.ssl.default-dh-param 2048
     maxcompcpuusage 80
     maxcomprate 200
-    ulimit-n 500000
-    pidfile /run/haproxy.pid
-    chroot /var/lib/haproxy
-    user haproxy
-    group haproxy
-    daemon
+    
+    # SSL settings
     ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES256-GCM-SHA384
     ssl-default-bind-options no-sslv3 no-tlsv10 no-tlsv11
+    
+    # Management socket
+    stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
+    stats timeout 1d
+    
+    # Base directories
     ca-base /etc/ssl/certs
     crt-base /etc/ssl/private
+    
+    # Process settings
+    user haproxy
+    group haproxy
+    chroot /var/lib/haproxy
+    daemon
+    pidfile /run/haproxy.pid
 
 defaults
     log global
@@ -36,7 +45,6 @@ defaults
     timeout server 4h
     timeout tunnel 4h
     timeout http-request 30s
-    option http-keep-alive
     retries 3
 
 # Frontend for multiport
@@ -65,10 +73,8 @@ frontend https_abstract
     tcp-request inspect-delay 3s
     tcp-request content capture req.ssl_sni len 100
     tcp-request content accept if { req.ssl_hello_type 1 }
-
     acl this_payload payload(0,7) -m bin 5353482d322e30
     acl up-to ssl_fc_alpn -i h2
-
     use_backend GRUP_FTVPN if up-to
     use_backend FTVPN if { path_reg -i ^\/(.*) }
     use_backend BOT_FTVPN if this_payload
@@ -79,14 +85,11 @@ frontend ssl
     mode tcp
     maxconn 75000
     bind *:443 ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1 tfo
-
     tcp-request inspect-delay 3s
     tcp-request content capture req.ssl_sni len 100
     tcp-request content accept if { req.ssl_hello_type 1 }
-
     acl this_payload payload(0,7) -m bin 5353482d322e30
     acl up-to ssl_fc_alpn -i h2
-
     use_backend GRUP_FTVPN if up-to
     use_backend FTVPN if { path_reg -i ^\/(.*) }
     use_backend BOT_FTVPN if this_payload
