--- a/ubuntu/xray.conf
+++ b/ubuntu/xray.conf
@@ -1,172 +1,244 @@
-{
-  "log": {
-    "loglevel": "error"
-  },
-  "inbounds": [
-    {
-      "listen": "127.0.0.1",
-      "port": 10000,
-      "protocol": "dokodemo-door",
-      "settings": {
-        "address": "127.0.0.1"
-      },
-      "tag": "api"
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10001,
-      "protocol": "vless",
-      "settings": {
-        "decryption": "none",
-        "clients": [
-          {
-            "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/vless"
+server {
+    listen 1010 proxy_protocol so_keepalive=on reuseport;
+    set_real_ip_from 127.0.0.1;
+    real_ip_header proxy_protocol;
+    server_name xxx;
+    
+    # Buffer optimizations
+    client_body_buffer_size 200K;
+    client_header_buffer_size 2k;
+    client_max_body_size 10M;
+    large_client_header_buffers 3 1k;
+    
+    # Timeout optimizations
+    client_header_timeout 86400000m;
+    keepalive_timeout 86400000m;
+    
+    # Security headers
+    add_header X-HTTP-LEVEL-HEADER 1;
+    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Content-Type-Options nosniff;
+
+    location ~ /vless {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /vless break;
         }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10002,
-      "protocol": "vmess",
-      "settings": {
-        "clients": [
-          {
-            "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0",
-            "alterId": 0
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/vmess"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10003,
-      "protocol": "trojan",
-      "settings": {
-        "clients": [
-          {
-            "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/trojan-ws"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10004,
-      "protocol": "shadowsocks",
-      "settings": {
-        "clients": [
-          {
-            "method": "aes-128-gcm",
-            "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "ws",
-        "wsSettings": {
-          "path": "/ss-ws"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10005,
-      "protocol": "vless",
-      "settings": {
-        "decryption": "none",
-        "clients": [
-          {
-            "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "grpc",
-        "grpcSettings": {
-          "serviceName": "vless-grpc"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10006,
-      "protocol": "vmess",
-      "settings": {
-        "clients": [
-          {
-            "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0",
-            "alterId": 0
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "grpc",
-        "grpcSettings": {
-          "serviceName": "vmess-grpc"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10007,
-      "protocol": "trojan",
-      "settings": {
-        "clients": [
-          {
-            "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "grpc",
-        "grpcSettings": {
-          "serviceName": "trojan-grpc"
-        }
-      }
-    },
-    {
-      "listen": "127.0.0.1",
-      "port": 10008,
-      "protocol": "shadowsocks",
-      "settings": {
-        "clients": [
-          {
-            "method": "aes-128-gcm",
-            "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-          }
-        ]
-      },
-      "streamSettings": {
-        "network": "grpc",
-        "grpcSettings": {
-          "serviceName": "ss-grpc"
-        }
-      }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10001;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     }
-  ],
-  "outbounds": [
-    {
-      "protocol": "freedom",
-      "settings": {}
+
+    location ~ /vmess {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /vmess break;
+        }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10002;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     }
-  ]
+
+    location ~ /trojan-ws {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /trojan-ws break;
+        }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10003;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+
+    location ~ /ss-ws {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /ss-ws break;
+        }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10004;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+
+    location ~ / {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /fightertunnelssh break;
+        }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10015;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+}
+
+server {
+    listen 1012 proxy_protocol so_keepalive=on reuseport;
+    
+    # Buffer optimizations
+    client_body_buffer_size 200K;
+    client_header_buffer_size 2k;
+    client_max_body_size 10M;
+    large_client_header_buffers 3 1k;
+    
+    # Timeout optimizations
+    client_header_timeout 86400000m;
+    keepalive_timeout 86400000m;
+    
+    server_name xxx;
+
+    location ~ / {
+        if ($http_upgrade != "Websocket") {
+            rewrite /(.*) /fightertunnelovpn break;
+        }
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:10012;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $http_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+}
+
+server {
+    listen 81 ssl http2 reuseport;
+    ssl_certificate /etc/xray/xray.crt;
+    ssl_certificate_key /etc/xray/xray.key;
+    ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+    ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+    root /var/www/html;
+}
+
+server {
+    listen 1013 http2 proxy_protocol so_keepalive=on reuseport;
+    
+    # Buffer optimizations
+    client_body_buffer_size 200K;
+    client_header_buffer_size 2k;
+    client_max_body_size 10M;
+    large_client_header_buffers 3 1k;
+    
+    # Timeout optimizations
+    client_header_timeout 86400000m;
+    keepalive_timeout 86400000m;
+    
+    server_name xxx;
+
+    location ~ /vless-grpc {
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        grpc_set_header Host $host;
+        grpc_pass grpc://127.0.0.1:10005;
+        grpc_set_header X-Real-IP $http_x_forwarded_for;
+        grpc_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+
+    location ~ /vmess-grpc {
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        grpc_set_header Host $host;
+        grpc_pass grpc://127.0.0.1:10006;
+        grpc_set_header X-Real-IP $http_x_forwarded_for;
+        grpc_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+
+    location ~ /trojan-grpc {
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        grpc_set_header Host $host;
+        grpc_pass grpc://127.0.0.1:10007;
+        grpc_set_header X-Real-IP $http_x_forwarded_for;
+        grpc_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
+
+    location ~ /ss-grpc {
+        add_header X-HTTP-LEVEL-HEADER 1;
+        add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
+        add_header X-SERVER-LEVEL-HEADER 1;
+        add_header X-LOCATION-LEVEL-HEADER 1;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        grpc_set_header Host $host;
+        grpc_pass grpc://127.0.0.1:10008;
+        grpc_set_header X-Real-IP $http_x_forwarded_for;
+        grpc_set_header X-Forwarded-For $http_x_forwarded_for;
+    }
 }
